# Hackhathon_0_ai_employee

./: .env.example  .gitignore  CLAUDE.md  CREDENTIALS_SETUP.md  Dockerfile  HOW_TO_USE_THIS_REPO.md  README.md  docker-compose.yml  ecosystem.config.js  pyproject.toml  quickstart.md  requirements.txt
AI_Employee/: .env.example  .gitignore  AI_PROCESSOR_README.md  BACKUP_RECOVERY.md  BACKWARD_COMPATIBILITY.md  CONSTITUTIONAL_COMPLIANCE.md  Company_Handbook.md  Dashboard.md  FINAL_VALIDATION.md  GRACEFUL_DEGRADATION.md  INSTALL.md  README.md  README_SILVER.md  RELEASE_NOTES.md  ROLLBACK_PROCEDURE.md  SECURITY_AUDIT.md  __init__.py  ai_process_items.py  autonomous_agent.py  check_instagram.py  check_specific_id.py  debug_facebook_token.py  demo_silver_tier.md  ecosystem.config.js  find_facebook_pages.py  linkedin_token_exchange.py  main.py  orchestrator.py  pyproject.toml  requirements.txt  run_ai_processor.py  run_orchestrator.py  run_watcher.py  system_health_check.py  test_facebook_api.py  test_facebook_connection.py  test_gmail_auth.py  test_groq_api.py  test_linkedin_auth.py  test_pm2_crash_recovery.py  (+8 more)
AI_Employee/.obsidian/: graph.json  workspace.json
AI_Employee/Rejected/: sync_test_approval.json
AI_Employee/mcp_servers/: __init__.py  email_mcp.py  facebook_mcp.py  facebook_mcp_auth.py  facebook_mcp_test_connection.py  instagram_mcp.py  instagram_mcp_test_connection.py  linkedin_mcp.py  linkedin_mcp_test_connection.py  odoo_mcp.py  playwright_mcp.py  twitter_mcp.py  twitter_mcp_auth.py  twitter_mcp_test_connection.py  xero_mcp.py  xero_mcp_auth.py  xero_mcp_cache.py  xero_mcp_test_connection.py
AI_Employee/models/: __init__.py  action_item.py  approval_request.py  audit_report.py  business_goal.py  business_metric.py  ceo_briefing.py  cross_domain_workflow.py  financial_summary.py  mcp_server.py  mcp_server_status.py  processed_tracker.py  social_media_engagement.py  social_media_post.py  watcher_instance.py  xero_transaction.py
AI_Employee/schedulers/: __init__.py  run_weekly_audit.py
AI_Employee/scripts/: check_mcp_health.py  create_accounting_folders.py
AI_Employee/tests/: __init__.py  conftest.py  test_approval_workflow.py  test_audit_logging.py  test_autonomous_agent.py  test_gold_tier_backward_compatibility.py  test_gold_tier_integration.py  test_gold_tier_performance.py  test_mcp_servers.py  test_odoo_connection.py  test_sanitizer.py  test_system_integration.py  test_watchers.py  validate_success_criteria.md
AI_Employee/utils/: __init__.py  approval_helper.py  audit_logger.py  classifier.py  config.py  dashboard.py  health_checker.py  linkedin_rules.py  retry_manager.py  sanitizer.py
AI_Employee/watch_folder/: auto-test-urgent-request.txt  budget_review.txt  duplicate-test.txt  e2e-test-request.txt  live-test-$(date +%s).txt  test-dashboard-update.txt  test_document.txt
AI_Employee/watchers/: __init__.py  base_watcher.py  (+4 more)
(+82 files in other folders)
